# ShoppingApp

./: .gitignore  CMakeLists.txt  README.md  Role.h  User.cpp  User.h  debug_template.txt  main.cpp
data/: ProductsInfo.txt  UsersInfo.txt
database/: CMakeLists.txt  Database.cpp  Database.h
logger/: CMakeLists.txt  Logger.cpp  Logger.h
model/: CMakeLists.txt  CartManager.cpp  CartManager.h  HistoryOrderManager.cpp  HistoryOrderManager.h  OrderManager.cpp  OrderManager.h  ProductManager.cpp  ProductManager.h  UserManager.cpp  UserManager.h
model_utils/: CMakeLists.txt  DataBase.h  FileError.h  FileHeader.h  FixedString.h  Result.h  ScurityUtils.cpp  SecurityUtils.h  Utils.h
ui/: CMakeLists.txt  ShopAppUI.cpp  ShopAppUI.h
ui/admin/: AdminPortal.cpp  AdminPortal.h
ui/admin/pages/: DashboardPage.h  InventoryPage.cpp  InventoryPage.h  UserManagePage.cpp  UserManagePage.h
ui/components/: SharedComponent.h
ui/pages/: CartPage.cpp  CartPage.h  HistoryOrderPage.cpp  HistoryOrderPage.h  LoginPage.cpp  LoginPage.h  OrderPage.cpp  OrderPage.h  RegisterPage.cpp  RegisterPage.h  ShopPage.cpp  ShopPage.h
ui_utils/: AppContext.h  CMakeLists.txt  LocationUtils.h  SecurityUtils.cpp  SecurityUtils.h  Utils.h
